Synchronized reload() and refresh() on contextualInfo so Oxygen gets the values at startup Fixed line break in Oxygen so @break works as defined Added @force dialog box to punctuation action in Oxygen

--- a/frameworks/emst/css/emst.css
+++ b/frameworks/emst/css/emst.css
@@ -649,11 +649,11 @@ lb {
     content:"\A";
 }
 
-lb[break="yes"] {
+lb[break="no"] {
     color:purple;
 /*    font-weight:bold; → – */
-    font-size:16px;
-    content:"–\A";
+/*    font-size:16px;*/
+    content:"→\A";
 }
 
 pb {
